feat#41 :: 피드백 수정